# tech-new-mystery

./: .editorconfig  .gitignore  AGENT_CORE_USAGE_GUIDE.md  ARCHITECTURE_DECISIONS.md  AUDIT_REPORT.md  CHATBOT_FEATURE_SPEC.md  CHAT_UI_IMPROVEMENTS_MAY30.md  CLUSTERING_FEATURE_SPEC.md  DESIGN_SYSTEM.md  FIXES_SUMMARY_MAY30_FINAL.md  IMPLEMENTATION_CHT_003.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANUAL_STARTUP.md  README.md  STREAMING_AND_UI_FIXES_MAY30.md  STREAMING_DIAGNOSTIC_REPORT.md  SYNTAX_HIGHLIGHTER_SETUP.md  TASKS.md  TASK_CHT_003_CHECKLIST.md  TASK_CHT_003_COMPLETION.md  TASK_CHT_003_DELIVERABLES.md  TASK_CHT_003_INDEX.md  TASK_CHT_003_SUMMARY.txt  TASK_CHT_006_COMPLETION.md  TASK_CLU_002_COMPLETION_REPORT.md  TASK_CLU_002_IMPLEMENTATION.md  TEST_EMBEDDINGS.md  VISUAL_AUDIT_REPORT.md  final-visual-report.mjs  run_all_tests.sh  test_agent_stream.py  test_api_stream.sh  test_browser_manual.md  test_chunk_structure.py  test_streaming_order.py  visual-audit-script.mjs
backend/: .dockerignore  .env.example  .gitignore  LOGGING_GUIDE.md  README.md  check_api.py  pyproject.toml  pytest.ini  requirements.txt  test_crawler_basic.py  test_implementation.py  test_imports.py  test_real_url.py
backend/app/: __init__.py  config.py  main.py
backend/scripts/: backfill_qdrant.py  create_tables.py  create_tables_boto3.py  create_test_accounts.py  init_db.sh
backend/tests/: conftest.py  test_admin_evaluation_endpoints.py  test_agent_core_client.py  test_agent_core_memory.py  test_agent_core_memory_integration.py  test_agent_core_validation.py  test_article_processing_new.py  test_article_service.py  test_auth_service.py  test_bedrock_zai_model.py  test_celery_scheduler.py  test_chat_auth.py  test_chat_auth_integration.py  test_chat_per_request_isolation.py  test_chat_router.py  test_chat_service.py  test_chat_streaming.py  test_clustering_config_repository.py  test_clustering_engine.py  test_clustering_evaluation_integration.py  test_clustering_metrics.py  (+31 more)
(+336 files in other folders)
